Re-style index page

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles.css">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./styles.css" />
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes (Styled)</h1>
-        <ul>
-            <li>
-                <a href="./recipes/lasagna.html">Lasagna Recipe</a>
-            </li>
-            <li>
-                <a href="./recipes/hotdog.html">Hot Dog Recipe</a>
-            </li>
-            <li>
-                <a href="./recipes/grilled-cheese.html">Grilled Cheese Recipe</a>
-            </li>
-        </ul>
+        <div class="wrapper">
+            <h1 class="header">Odin Recipes</h1>
+            <ul class="list">
+                <a href="./recipes/lasagna.html" class="list__link">
+                    <li class="list__item">Lasagna Recipe</li>
+                </a>
+                <a href="./recipes/hotdog.html" class="list__link">
+                    <li class="list__item">Hot Dog Recipe</li>
+                </a>
+                <a href="./recipes/grilled-cheese.html" class="list__link">
+                    <li class="list__item">Grilled Cheese Recipe</li>
+                </a>
+            </ul>
+        </div>
     </body>
 </html>
